--- a/index.html
+++ b/index.html
@@ -19,9 +19,9 @@
 
 
 <body>
-<div class="img">
+  <div class="img">
 
-</div>
+  </div>
 
 
 
@@ -53,9 +53,9 @@
 
 
   <h1 class="Spanish"><span style="background-color:#959696cc">Bienvenidos Al Sitio Web De Flash Crypto Token</h1>
-<br>
+  <br>
 
-      <h1 class="English"><span style="background-color:#959696cc">Welcome to the Flash Crypto Token Website</h1>
+  <h1 class="English"><span style="background-color:#959696cc">Welcome to the Flash Crypto Token Website</h1>
 
 
 
@@ -63,12 +63,14 @@
 
   <h2 class="English"><span style="background-color:#959696cc"> What is Flash Crypto Token</h2>
 
-  <p class="Spanish"><span style="background-color:#959696cc">-El viaje de Flash Crypto Token comenzó el 26 de julio del 2021 creado por unos desarrolladores es un token de la red de bsc. El equipo de Flash Crypto Token ha estado activo con desarrollos continuos, la
+  <p class="Spanish"><span style="background-color:#959696cc">-El viaje de Flash Crypto Token comenzó el 26 de julio del 2021 creado por unos desarrolladores es un token de la red de bsc. El equipo de Flash Crypto Token ha estado activo con
+      desarrollos continuos, la
       comunidad está creciendo exponencialmente
       con miembros de todos los continentes del planeta</p>
 
-  <p class="English"><span style="background-color:#959696cc"> The journey of Flash Crypto Token began on July 26, 2021 created by some developers is a token of the bsc network. The Flash Crypto Token team has been active with continuous developments, the community is growing exponentially with members
-    from every continent on the planet</p>
+  <p class="English"><span style="background-color:#959696cc"> The journey of Flash Crypto Token began on July 26, 2021 created by some developers is a token of the bsc network. The Flash Crypto Token team has been active with continuous
+      developments, the community is growing exponentially with members
+      from every continent on the planet</p>
 
   <h2 class="Spanish"><span style="background-color:#959696cc">¿Como uso Flash Crypto Token?</h2>
 
@@ -81,7 +83,7 @@
 
 
   <a class="Link" href="https://flashcryptotoken.github.io/" target=><span style="background-color:#959696cc">Este es el link que permite vincular Binance Smart chain con metamask</a>
-<br>
+  <br>
   <a class="Link" href="https://flashcryptotoken.github.io/" target=><span style="background-color:#959696cc"> This is the link that allows linking Binance Smart chain with metamask</a>
 
 
@@ -93,26 +95,26 @@
 
 
   <p class="Spanish"><span style="background-color:#959696cc">Ticker: FCT
-    <br>
+      <br>
       Supply: 100.000.000.000
       <br>
       Decimales: 8
-<br>
+      <br>
       Red: Bsc
-<br>
+      <br>
       Contrato: 0x33E47b4f27D11bfD439EC2A47217874aE11EAcBd</p>
 
 
 
   <p class="English"><span style="background-color:#959696cc">Ticker: FCT
-<br>
-    Supply: 100,000,000,000
-<br>
-    Decimals: 8
-    <br>
-    Network: BSC
-<br>
-    Contract Address: 0x33E47b4f27D11bfD439EC2A47217874aE11EAcBd </p>
+      <br>
+      Supply: 100,000,000,000
+      <br>
+      Decimals: 8
+      <br>
+      Network: BSC
+      <br>
+      Contract Address: 0x33E47b4f27D11bfD439EC2A47217874aE11EAcBd </p>
 
   <a href="https://bscscan.com/token/0x33e47b4f27d11bfd439ec2a47217874ae11eacbd" target=><span style="background-color:#959696cc">BSC Scan</a>
 
@@ -156,14 +158,16 @@
 
   <br><br>
 
-  <p class="Spanish"><span style="background-color:#959696cc">Flash Crypto Token ofrece a sus usuarios una red mundial descentralizado, anónimo y segura de fácil acceso mediante una amplía gama billeteras en múltiples sistemas operativos. FCT también ofrece una red
+  <p class="Spanish"><span style="background-color:#959696cc">Flash Crypto Token ofrece a sus usuarios una red mundial descentralizado, anónimo y segura de fácil acceso mediante una amplía gama billeteras en múltiples sistemas operativos. FCT también
+      ofrece una red
       baja, es mucho más barato de usar que
       bitcoin, el objetivo es crear una plataforma de juego criptografico dónde los usuarios al jugarlo gane token FCT</p>
 
 
 
-  <p class="English"><span style="background-color:#959696cc">Flash Crypto Token offers its users a global decentralized, anonymous and secure network with easy access through a wide range of wallets on multiple operating systems. FCT also offers a low network, it is much cheaper to use than bitcoin, and
-    the goal is to create a cryptographic gaming platform where users earn FCT tokens by playing it</p>
+  <p class="English"><span style="background-color:#959696cc">Flash Crypto Token offers its users a global decentralized, anonymous and secure network with easy access through a wide range of wallets on multiple operating systems. FCT also offers a
+      low network, it is much cheaper to use than bitcoin, and
+      the goal is to create a cryptographic gaming platform where users earn FCT tokens by playing it</p>
 
 
 
@@ -188,12 +192,9 @@
 
   <a href="https://www.facebook.com/166007387204910/posts/1325484994590471/?substory_index=0&app=fbl" target=><span style="background-color:#959696cc">Facebook</a>
   <br>
-  <a href="https://youtube.com/channel/UCgqq8CmO41YFPq-jtvnYZgQ" target=><span style="background-color:#959696cc">YouTube</a>
+  <a href="https://www.youtube.com/channel/UCgqq8CmO41YFPq-jtvnYZgQ" target=><span style="background-color:#959696cc">YouTube</a>
 
   <br><br><br>
-
-
-
 
 
 
@@ -208,7 +209,7 @@
 
 
 
-    <p class="copyright"><span style="background-color:white">© 2022 Flash Crypto Token</p>
+    <p class="copyright"><span style="background-color:yellow">© 2022 Flash Crypto Token</p>
   </div>
 
 
